syntax = "proto3";

package estate;

message Estate {
  string id = 1;
  string estateName = 2;
  string estateCode = 3;
  string countryId = 4;
}

// *********** DTO ***********
message Create {
  string estateName = 1;
  string estateCode = 2;
  string countryId = 3;
}

message Update {
  string id = 1;
  string estateName = 2;
  string estateCode = 3;
  string countryId = 4;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string estateName = 2;
  string estateCode = 3;
  string countryId = 4;
}

// *********** One ***********
message One {
  Estate data = 1;
}

// *********** Many ***********
message Many {
  repeated Estate data = 1;
}

service EstateService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}

