// Original file: src/protos/3/address.proto


export interface Create {
  'addressLine1'?: (string);
  'addressLine2'?: (string);
  'addressZipCode'?: (string);
  'addressFullName'?: (string);
  'addressPhone'?: (string);
  'cityId'?: (string);
}

export interface Create__Output {
  'addressLine1': (string);
  'addressLine2': (string);
  'addressZipCode': (string);
  'addressFullName': (string);
  'addressPhone': (string);
  'cityId': (string);
}
