// Original file: src/protos/3/address.proto

export interface Address {
  id?: string;
  addressLine1?: string;
  addressLine2?: string;
  addressZipCode?: string;
  addressFullName?: string;
  addressPhone?: string;
  cityId?: string;
}

export interface Address__Output {
  id: string;
  addressLine1: string;
  addressLine2: string;
  addressZipCode: string;
  addressFullName: string;
  addressPhone: string;
  cityId: string;
}
